--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".loginSuccess"></activity>
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".ChooseClass"></activity>
     </application>
 
 </manifest>
